--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,8 @@ header {
 .container-logo {
    display: flex;
    justify-content: space-between;
-   width: 990px;
+   max-width: 990px;
+   width: 100%;
    border-bottom: 1px solid var(--secondary-color);
 }
 
@@ -136,6 +137,7 @@ nav a:hover {
    border-radius: 20px;
    font-size: 16px;
    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
 .btn-primary  a{
@@ -146,7 +148,6 @@ nav a:hover {
 .btn-primary:hover {
    background-color: var(--main-text-colorido);
    transform: translateY(-2px);
-   transition: all 0.3s ease;
 }
 
 .hero-image img {
@@ -263,7 +264,6 @@ nav a:hover {
 .card img {
    width: 100%;
    height: 200px;
-   ;
    object-fit: cover;
    border-radius: 14px 14px 0 0;
 }
@@ -371,4 +371,15 @@ nav a:hover {
 .footer-bottom p {
    font-size: 13px;
    color: var(--light-color);
+}
+
+@media (max-width: 768px) {
+   .hero {
+      flex-direction: column;
+      text-align: center;
+   }
+
+   .cards {
+      grid-template-columns: 1fr;
+   }
 }
